<resources>
    <string name="app_name">智慧雉城</string>
    <string name="share_dialog_title">分享</string>
    <string name="poor_network">网络连接失败，请检查您的网络</string>
    <string name="enterSearch">请输入搜索内容</string>
    <string name="action_location">位置</string>
    <string name="album">返回</string>
    <string name="camera_cancel">取消</string>
    <string name="preview">上一页</string>
    <string name="no_photo">空相册</string>
    <string name="finish">结束</string>
    <string name="photo">图片</string>
    <string name="unfinished">未结束</string>
    <string name="action_send">上报</string>
    <string name="bao_content">请输入爆料具体内容</string>
    <string name="bao_location">无法获取当前位置</string>
    <string name="NoFinish">待办事项</string>
    <string name="Finished">已办事项</string>
    <string name="Sended">已发事项</string>
    <string name="FenLei">事件查询</string>
    <string name="GridDataBase">数据网格</string>
    <string name="work">工作动态</string>
    <string name="Experiment">经验交流</string>
    <string name="CallTheCoun">通知公告</string>
    <string name="workNote">工作日志</string>
    <string name="action_deal">处理</string>
    <string name="i_content">爆料描述:</string>
    <string name="i_content_hint">请输入爆料描述…</string>
    <string name="i_deal_hint">请输入描述内容…</string>
    <string name="i_apply_hint">请输入申请描述…</string>
    <string name="Bao">爆料</string>
    <string name="Accept">受理</string>
    <string name="Deal">处理</string>
    <string name="Complete">办结</string>
    <string name="i_choose">请选择</string>
    <string name="fourAddress">四至:</string>
    <string name="AllAcreage">总面积:</string>
    <string name="AllHousehold">总户数:</string>
    <string name="belongStreet">所在街道</string>
    <string name="addPersonal">登记楼栋人员信息</string>
    <string name="belongBuild">所在楼栋:</string>
    <string name="login">登录</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="account_name">请输入用户名</string>
    <string name="account_password">请输入密码</string>
    <string name="notice">若无账号，请联系管理员获取账号</string>
    <string name="can_not_find_version_name">位置版本号</string>
    <string name="deal_hint">请输入处理上报内容</string>
    <string name="no_login">未登录</string>
    <string name="allThings">全部事项</string>
    <string name="frount_things">前置事项</string>
    <string name="normal_things">普通事项</string>
    <string name="grid_base_search">查询</string>
    <string name="action_add">新增</string>
    <string name="action_operate">操作</string>
    <string name="action_update">修改</string>
    <string name="action_submit">提交</string>
    <string name="action_filter">筛选</string>
    <string name="search">搜索</string>
    <string name="delete">删除</string>

    <string name="grid_base_add_residence">居住地址:</string>
    <string name="grid_base_add_grid_no">所属网格:</string>
    <string name="grid_base_add_grid_village">所属村居:</string>
    <string name="grid_base_add_name">姓名/住户:</string>
    <string name="grid_base_add_relation">与房主/户主关系:</string>
    <string name="grid_base_huzu_name">房主/户主姓名:</string>
    <string name="grid_base_add_sex">性别:</string>
    <string name="grid_base_add_age">出生日期:</string>
    <string name="grid_base_add_cardid">公民身份号码:</string>
    <string name="grid_base_add_policatial">政治面貌:</string>
    <string name="grid_base_add_degree">学历:</string>
    <string name="grid_base_add_married">婚姻状况:</string>
    <string name="grid_base_add_brithplace">户籍地址:</string>
    <string name="grid_base_add_telephone">联系电话:</string>
    <string name="grid_base_add_workspace">工作单位:</string>
    <string name="grid_base_add_hobby">兴趣爱好:</string>
    <string name="grid_base_add_remark">重点服务对象:</string>
    <string name="grid_base_add_fromplace">流出地:</string>
    <string name="grid_base_add_rkfl">人口类型:</string>
    <string name="grid_base_add_lessor">出租人:</string>
    <string name="grid_base_add_lessor_telephone">出租人电话:</string>
    <string name="grid_base_add_lessor_remark">管控类型:</string>
    <string name="hint_grid_name">请输入姓名</string>
    <string name="hint_grid_homeplace">请输入居住地</string>
    <string name="hint_grid_villiage">请输入所属村居</string>
    <string name="hint_grid_choice">请选择</string>
    <string name="hint_grid_owner_name">请输入房主/户主姓名</string>
    <string name="hint_grid_cardno">请输入公民身份号码</string>
    <string name="hint_grid_workplace">请输入工作单位</string>
    <string name="hint_grid_call">请输入联系电话</string>
    <string name="hint_grid_birthplace">请输入户籍地址</string>
    <string name="hint_grid_outaddress">请输入流出地</string>
    <string name="hint_grid_hobby">请输入兴趣爱好</string>
    <string name="hint_grid_renter">请输入出租人</string>
    <string name="hint_grid_renter_callno">请输入出租人电话</string>
    <string name="hint_grid_age">请输入年龄</string>


    <string name="grid_location_open">定位开启提醒</string>
    <string name="grid_location_close">定位关闭提醒</string>
    <string name="grid_location_message">您已进入到网格数据模块，是否开启定时定位上传服务记录您的网格基础数据录入行程?</string>
    <string name="grid_location_close_message">您的定时定位上传服务正在运行中，是否关闭?</string>
    <string name="contact_no_result">没有搜索到相应结果</string>
    <string name="contact_edit_hint">请输入关键字</string>
    <string name="apply">申请重新派遣</string>
    <string name="file_provider">com.zhicheng.fileProvider</string>
    <string name="version_update">更新</string>
    <string name="find_new_version">发现新版本,是否进行下载更新?</string>
    <string name="download">下载</string>
    <string name="update_cancel">取消</string>
    <string name="nofinish_deal">处理</string>
    <string name="nofinish_apply">申请</string>
    <string name="more">更多>></string>
    <string name="homepage">首页</string>
    <string name="map">地图</string>
    <string name="baoliao">爆料</string>
    <string name="news">消息</string>
    <string name="mine">我的</string>
    <string name="grid">所属网格</string>
    <string name="setting">设置</string>
    <string name="exit">退出登录</string>
    <string name="exit_content">是否退出重新登录？</string>
    <string name="action_invalid">作废</string>
    <string name="dynamic_detail">工作动态详情</string>
    <string name="action_choice">选择</string>

    <string name="exp_title">标题:</string>
    <string name="exp_hint_title">请输入标题</string>
    <string name="exp_sender">发布人:</string>
    <string name="exp_dept">所在部门:</string>
    <string name="exp_hint_content">请输入内容</string>
    <string name="baoliao_title">我的爆料</string>
    <string name="grid_base_title">网格基础数据</string>
    <string name="grid_base_detail_title">网格基础数据详情</string>
    <string name="grid_base_location_alert">请先开启定位后再录入网格数据</string>
    <string name="huzu_choice">请选择户主</string>

    <string name="ad_search">高级搜索</string>
    <string name="hint_search">请输入姓名、户籍地址或居住地址进行搜索</string>
    <string name="grid_sender">采集人:</string>
    <string name="hint_grid_sender">请输入采集人</string>
    <string name="grid_time">采集时间:</string>
    <string name="hint_grid_time">请选择采集时间</string>
    <string name="grid_base_more_search">网格基础数据高级搜索</string>
    <string name="to">至</string>
    <string name="hint_hz_search">请输入房主/户主姓名进行搜索</string>
    <string name="hz_search">房主/户主姓名搜索</string>
    <string name="no_data">未查询到数据</string>
    <string name="grid_base_add_title">新增网格基础数据</string>
    <string name="event_type_statistics">事件类型统计</string>

    <string-array name="detail">
        <item>编号:</item>
        <item>来源:</item>
        <item>爆料时间:</item>
    </string-array>

    <string-array name="detail_last">
        <item>协办人:</item>
        <item>事件备注:</item>
        <item>办理进度:</item>
    </string-array>

    <string-array name="NoFinishDetail">
        <item>来源:</item>
        <item>事项类型:</item>
        <item>爆料人姓名:</item>
        <item>爆料人电话:</item>
        <item>爆料时间:</item>
        <item>爆料内容:</item>
        <item>爆料图片:</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_save">保存</string>


</resources>
