<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/textView_padding"
    app:cardBackgroundColor="@color/white"
    android:layout_margin="8dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="right"
                android:text="@string/grid_base_add_cardid"
                android:padding="@dimen/textView_padding"
                android:id="@+id/textView3" />

            <EditText
                android:id="@+id/grid_base_add_cardid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:background="@null"
                android:inputType="number"
                android:maxLength="18"
                android:hint="@string/hint_grid_cardno"
                android:textSize="@dimen/content_size"
                android:digits="0123456789xyzXYZ"
                android:textColor="@color/black"
                android:padding="@dimen/textView_padding" />
        </LinearLayout>

        <include layout="@layout/z_line" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="right"
                android:text="@string/grid_base_add_workspace"
                android:padding="@dimen/textView_padding" />

            <EditText
                android:id="@+id/grid_base_add_workspace"
                android:layout_width="0dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:background="@null"
                android:textSize="@dimen/content_size"
                android:hint="@string/hint_grid_workplace"
                android:padding="@dimen/textView_padding" />
        </LinearLayout>

        <include layout="@layout/z_line" />



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="right"
                android:text="@string/grid_base_add_fromplace"
                android:padding="@dimen/textView_padding"
                android:id="@+id/textView14" />

            <EditText
                android:id="@+id/grid_base_add_outaddress"
                android:layout_width="0dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:background="@null"
                android:textSize="@dimen/content_size"
                android:hint="@string/hint_grid_outaddress"
                android:padding="@dimen/textView_padding" />
        </LinearLayout>

        <include layout="@layout/z_line" />




        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="right"
                android:text="@string/grid_base_add_hobby"
                android:padding="@dimen/textView_padding"
                android:id="@+id/textView15" />
            <TextView
                android:id="@+id/grid_base_add_hobby"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:textColor="@color/black"
                android:maxLines="1"
                android:textSize="@dimen/content_size"
                android:gravity="center|left"
                android:paddingLeft="10dp"
                android:hint="@string/hint_grid_choice"
                android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp" />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>