<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/content"
    android:fitsSystemWindows="true"
    android:clipToPadding="false">

    <include layout="@layout/activity_home_toolbar" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="right|center"
            android:text="@string/grid"
            android:padding="@dimen/textView_padding" />

        <TextView
            android:id="@+id/grid_base_no"
            android:layout_width="0dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@null"
            android:gravity="left|center"
            android:textSize="@dimen/content_size"
            android:hint="@string/hint_grid_choice"
            android:padding="@dimen/textView_padding"
            android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp" />
    </LinearLayout>

    <include layout="@layout/z_line" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="right"
            android:text="@string/grid_sender"
            android:padding="@dimen/textView_padding"
            android:id="@+id/textView12" />

        <EditText
            android:id="@+id/grid_base_sender"
            android:layout_width="0dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@null"
            android:textSize="@dimen/content_size"
            android:hint="@string/hint_grid_sender"
            android:padding="@dimen/textView_padding" />
    </LinearLayout>

    <include layout="@layout/z_line" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.6"
            android:gravity="right"
            android:text="@string/grid_time"
            android:padding="@dimen/textView_padding" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2.5"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/grid_base_start_time"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center|left"
                android:textSize="@dimen/content_size"
                android:hint="@string/hint_grid_time"
                android:padding="@dimen/textView_padding" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:id="@+id/textView13" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2.5"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/grid_base_end_time"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textSize="@dimen/content_size"
                android:gravity="center"
                android:hint="@string/hint_grid_time"
                android:padding="@dimen/textView_padding" />
        </LinearLayout>


    </LinearLayout>

    <include layout="@layout/z_line" />

</LinearLayout>