<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/cardview_light_background">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/fabNotice_nofinish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_marginRight="@dimen/textView_padding"
                android:minWidth="19dp"
                android:maxHeight="19dp"
                android:padding="2dp"
                android:background="@drawable/i_show_deal"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="@dimen/badge_text_size"
                android:visibility="gone" />

            <TextView
                android:id="@+id/noFinish"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="8dp"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/home_menu_tobedone"
                android:text="@string/NoFinish" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/fabNotice_finished"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_marginRight="@dimen/textView_padding"
                android:minWidth="19dp"
                android:maxHeight="19dp"
                android:padding="2dp"
                android:visibility="gone"
                android:background="@drawable/i_show_deal"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="@dimen/badge_text_size" />

            <TextView
                android:id="@+id/Finished"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="8dp"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/home_menu_hasbenndone"
                android:text="@string/Finished" />
        </FrameLayout>

        <TextView
            android:id="@+id/FenLei"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/home_menu_eventquery"
            android:text="@string/FenLei" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/cardview_light_background">

        <TextView
            android:id="@+id/GridDataBase"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/home_menu_datagrid"
            android:text="@string/GridDataBase" />


        <TextView
            android:id="@+id/Experiment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="8dp"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/home_menu_exchangeofexperienc"
            android:text="@string/Experiment" />


        <TextView
            android:id="@+id/workNote"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="8dp"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/home_menu_worklog"
            android:text="@string/workNote" />
    </LinearLayout>
</LinearLayout>