<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/textView_padding"
    app:cardBackgroundColor="@color/white"
    android:layout_margin="8dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:layout_height="wrap_content">
                <include layout="@layout/activity_required_red"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grid_base_add_name"
                    android:padding="@dimen/textView_padding"
                    android:id="@+id/textView7" />
            </LinearLayout>
            <EditText
                android:id="@+id/grid_base_add_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/black"
                android:background="@null"
                android:hint="@string/hint_grid_name"
                android:textSize="@dimen/content_size"
                android:padding="@dimen/textView_padding" />
        </LinearLayout>

        <include layout="@layout/z_line" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:layout_height="wrap_content">
                <include layout="@layout/activity_required_red"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="@dimen/textView_padding"
                android:text="@string/grid_base_add_residence" />
    </LinearLayout>
            <EditText
                android:id="@+id/grid_base_add_residence"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:background="@null"
                android:hint="@string/hint_grid_homeplace"
                android:textSize="@dimen/content_size"
                android:padding="@dimen/textView_padding" />
        </LinearLayout>

        <include layout="@layout/z_line" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:layout_height="wrap_content">
                <include layout="@layout/activity_required_red"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grid_base_add_grid_village"
                    android:padding="@dimen/textView_padding"/>
            </LinearLayout>

            <EditText
                android:id="@+id/grid_base_add_village"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/black"
                android:background="@null"
                android:hint="@string/hint_grid_villiage"
                android:textSize="@dimen/content_size"
                android:padding="@dimen/textView_padding" />
        </LinearLayout>

        <include layout="@layout/z_line" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:layout_height="wrap_content">
                <include layout="@layout/activity_required_red"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="@dimen/textView_padding"
                android:text="@string/grid_base_add_grid_no" />
        </LinearLayout>
            <TextView
                android:id="@+id/grid_base_add_grid_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textSize="@dimen/content_size"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:padding="@dimen/textView_padding" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>